Fix text alignment and set font-family in header
Corrected text alignment and added font-family to header.

--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,16 @@ header {
   color:white;
   padding:20px
   text-align:centre;
+  font-family:ALGERIAN;
 }
 header h1 {
   margin:0;
-  font-family:ALGERIAN;
+  
   text-align:centre;
 }
 header h2 {
   margin:0;
-  font-family:ALGERIAN;
+  
   text-align:centre;
 }
 
